[package]
name = "tmp-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.28"
num = "0.4.0"
tokio-ping = "0.3.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tokio-icmp-echo = "0.4.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = "2"
